<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    android:orientation="vertical"
    tools:context="com.example.rsy.myapplication.DeviceFindActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_bar"
        android:gravity="center"
        android:text="@string/text_deviceSettings"
        android:textColor="@color/button_text"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/textView_chooseInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@+id/button_chooseInfo"
                android:background="@drawable/bg_edit"
                android:gravity="center"
                android:text="@string/text_chooseMyDevice" />

            <Button
                android:id="@+id/button_chooseInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView_chooseInfo"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/button_blue_style"
                android:text="@string/button_chooseInfo"
                android:textAllCaps="false"
                android:textColor="@color/button_text" />

        </RelativeLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/sr_fresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/list_bd"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_findDevices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_blue_style"
                android:text="@string/button_findDevice"
                android:textAllCaps="false"
                android:textColor="@color/button_text" />

            <Button
                android:id="@+id/button_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_blue_style"
                android:text="@string/button_startWeigh"
                android:textAllCaps="false"
                android:textColor="@color/button_text" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
