<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    android:orientation="vertical"
    tools:context="com.example.rsy.myapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bar"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/bar_main_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_back" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_deviceModel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_LMC_310"
            android:textColor="@color/button_text"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/bar_main_settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/icon_settings" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/text_weight"
                android:textColor="@color/button_text"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textSize="75sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="."
                    android:textSize="60sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="345"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/textView_changeWeightUnity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_additionalPressDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/text_press"
                android:textColor="@color/button_text"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textSize="75sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="."
                    android:textSize="60sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="345"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/textView_changePressUnity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_blue_style"
                android:text="@string/button_clear"
                android:textAllCaps="false"
                android:textColor="@color/button_text" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_red_button"
                android:text="@string/button_powerOff"
                android:textAllCaps="false"
                android:textColor="@color/button_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_additionalButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_addIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue_style"
                    android:text="@string/button_addIn"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text" />

                <Button
                    android:id="@+id/button_recycle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue_style"
                    android:text="@string/button_recycle"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text" />

                <Button
                    android:id="@+id/button_repeat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue_style"
                    android:text="@string/button_repeat"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_full"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue_style"
                    android:text="@string/button_full"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text" />

                <Button
                    android:id="@+id/button_stop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue_style"
                    android:text="@string/button_stop"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
